# diffmjx

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh  setup.sh
experiments/: utils.py
experiments/01_diffrax_toyexample/: config.yaml  run.py
experiments/01_toyexample/: config.yaml  run.py
experiments/02_diffrax_tossobjects/: config.yaml  run.py
experiments/02_tossobjects/: config.yaml  run.py
experiments/02_tossobjects/method/: diffrax.yaml  diffrax_soft.yaml  diffrax_soft_backsolve.yaml  mjx.yaml
experiments/03_billiard/: config.yaml  config_backsolve.yaml  run.py
experiments/04_diffrax_time-toss/: config.yaml  run.py
experiments/04_time-toss/: config.yaml  plot.py  run.py
experiments/04_time-toss/results/: cube_results.csv
experiments/05_diffrax_time-vmap/: config.yaml  plot.py  run.py
experiments/xml/: ball.xml  ball_box.xml  billiard.xml  billiard_nogravity.xml  billiard_trick.xml  capsule.xml  cube.xml  cylinder.xml  ellipsoid.xml
